update homework12