@@ -1,13 +1,15 @@
 package de.telran.Homework12_file_path;
 
 import java.io.*;
+import java.nio.file.*;
+import java.nio.file.attribute.BasicFileAttributes;
 import java.util.Arrays;
 
 public class AdvancedFileOperations {
 
     public static void main(String[] args) throws IOException {
-        countWordsInFile();
-        findTxtFilesInDirectory();
+//        countWordsInFile();
+//        findTxtFilesInDirectory("C:\\Program Files");
         copyLastParagraphUsingRandomAccess();
     }
 
@@ -36,11 +38,55 @@ public class AdvancedFileOperations {
      * в текущей директории и её поддиректориях. Результаты поиска
      * (пути к файлам) записать в файл "found_files.txt".
      */
-    public static void findTxtFilesInDirectory() throws IOException{
-        File file = new File(".txt");
-//        Path path = Path.of()
-//                Files.walkFileTree()
-//http
+    public static void findTxtFilesInDirectory(String startDir) throws IOException {
+        try (BufferedWriter writer = new BufferedWriter(new FileWriter("found_files.txt"))) {
+//            Files.list(Paths.get(startDir)).filter(path -> path.toString().endsWith(".txt"))
+//                    .forEach(path -> {
+//                        try {
+//                            writer.write(path+"\n");
+//                        } catch (IOException e) {
+//                            throw new RuntimeException(e);
+//                        }
+//                    });
+//            Files.walkFileTree(Paths.get(startDir), new FileVisitor<Path>() {
+//                @Override
+//                public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) throws IOException {
+//                    return FileVisitResult.CONTINUE;
+//                }
+//
+//                @Override
+//                public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
+//                    if (file.toString().endsWith(".txt")){
+//                        writer.write(file+"\n");
+//                    }
+//                    return FileVisitResult.CONTINUE;
+//                }
+//
+//                @Override
+//                public FileVisitResult visitFileFailed(Path file, IOException exc) throws IOException {
+//                    return FileVisitResult.CONTINUE;
+//                }
+//
+//                @Override
+//                public FileVisitResult postVisitDirectory(Path dir, IOException exc) throws IOException {
+//                    return FileVisitResult.CONTINUE;
+//                }
+//            });
+            Files.walkFileTree(Paths.get(startDir), new SimpleFileVisitor<Path>() {
+                @Override
+                public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
+                    if (file.toString().endsWith(".txt")) {
+                        writer.write(file + "\n");
+                    }
+                    return FileVisitResult.CONTINUE;
+                }
+
+                @Override
+                public FileVisitResult visitFileFailed(Path file, IOException exc) throws IOException {
+                    return FileVisitResult.CONTINUE;
+                }
+            });
+        }
     }
 
     // Усложненное Задание 3: Работа с классом RandomAccessFile
@@ -51,6 +97,18 @@ public class AdvancedFileOperations {
      * в файле и копирует его содержимое в новый файл "last_paragraph.txt".
      */
     public static void copyLastParagraphUsingRandomAccess() throws IOException {
-
+        try (BufferedWriter writer = new BufferedWriter(new FileWriter("last_paragraph.txt"))){
+            RandomAccessFile file = new RandomAccessFile("example.txt","rw");
+            long position = file.length()-1;
+            int lastChar = '\n';
+            while (position>=0){
+                file.seek(position);
+                if (file.read() == lastChar){
+                    break;
+                }
+                position--;
+            }
+            writer.write(file.readLine());
+        }
     }
 }
